--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   http: ^0.13.5
   flutter_secure_storage: ^8.0.0
+  tabbed_view: ^1.16.0+1
 
 
   # The following adds the Cupertino Icons font to your application.
