--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   http: ^0.13.5
   flutter_secure_storage: ^8.0.0
   tabbed_view: ^1.16.0+1
+  syncfusion_flutter_datagrid: ^21.1.38
+  provider: ^6.0.5
 
 
   # The following adds the Cupertino Icons font to your application.
