--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   tabbed_view: ^1.16.0+1
   syncfusion_flutter_datagrid: ^21.1.38
   provider: ^6.0.5
+  dropdown_button2: ^2.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
